# Amplitron

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  dev.sh  imgui.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-preview.yml  release.yml
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
docs/: index.html
presets/: 01_Sparkling_Clean.json
scripts/: build_windows.ps1  package_linux.sh  package_macos.sh  package_windows.ps1
src/: common.h  main.cpp  preset_json.cpp  preset_manager.cpp  preset_manager.h  preset_manager_io.cpp
src/audio/: audio_backend.h  audio_backend_portaudio.cpp  audio_backend_sdl.cpp  audio_engine.cpp  audio_engine.h  effect.h  effect_factory.h  midi_input.cpp  midi_input.h  recorder.cpp  recorder.h  recorder_io.cpp  spsc_queue.h
src/audio/dsp/: biquad.h  circular_buffer.h  convolution_engine.cpp  envelope_follower.h  wav_loader.cpp
src/audio/effects/: amp_simulator.cpp  amp_simulator.h  cabinet_sim.cpp  cabinet_sim.h  chorus.cpp  chorus.h  compressor.cpp  compressor.h  delay.cpp  delay.h  distortion.cpp  distortion.h  equalizer.cpp  equalizer.h  flanger.cpp  flanger.h  ir_cabinet.cpp  ir_cabinet.h  noise_gate.cpp  noise_gate.h  octaver.cpp  octaver.h  overdrive.cpp  overdrive.h  phaser.cpp  phaser.h  pitch_shifter.cpp  pitch_shifter.h  reverb.cpp  reverb.h  tuner.cpp  tuner.h  wah.cpp  wah.h
src/gui/: command.h  command_history.cpp  command_history.h  file_dialog.h  file_dialog_native.cpp  file_dialog_native_folder.cpp  file_dialog_native_open.cpp  file_dialog_web.cpp  gl_setup.h  gui_analyzer.cpp  gui_analyzer.h  gui_manager.cpp  gui_manager.h  gui_manager_menu.cpp  gui_manager_update.cpp  gui_midi.cpp  gui_midi.h  gui_presets.cpp  gui_presets.h  gui_recording.cpp  gui_recording.h  gui_settings.cpp  gui_settings.h  gui_tuner.cpp  gui_tuner.h  pedal_board.cpp  pedal_board.h  pedal_board_menu.cpp  pedal_widget.cpp  pedal_widget.h  pedal_widget_knobs.cpp  spectrum_analyzer.cpp  spectrum_analyzer.h  theme.h
src/midi/: midi_manager.cpp  midi_manager.h  midi_manager_mapping.cpp
tests/: test_command_history.cpp  test_effects.cpp  test_midi.cpp  test_preset_manager.cpp  test_recorder.cpp  test_unsaved_preset.cpp
tests/web/: playwright.config.ts
